--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2018-11-14  Wendell Baker  <wbaker@oath.com>
+
+	* Version v1.5.0-0.devel, tunitas::server::exception::Generic
+	- libtunitas-server C:R:A=2.0.1, reflecting the addition
+	* src/tunitas/server/exception.Generic.xcpp: ibidem.
+
 2018-11-13  Wendell Baker  <wbaker@oath.com>
 
 	* Version v1.4.0-0.devel, tunitas::urlsafe::encode, tunitas::urlsafe::decode
