--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2019-01-23  Wendell Baker  <wbaker@verizonmedia>
+
+	* Version v1.7.0-0.devel, add tunitas.app.exception becomes a module
+	- to allow applications to cascade the namespace (easily)
+	- Whereas this is a pure organizational change, rachet the C:R:A=7.1.4 ~ O.F.A=3.4.1
+	* src/tunitas/app/exception/namespace.xcpp: ibidem
+
 2019-01-04  Wendell Baker  <wbaker@oath.com>
 
 	* Version v1.7.0-0.devel, add tunitas::app::options::get_word, get_identifier, get_filepath
@@ -7,7 +14,7 @@
 	  any string of characters not containing whitespace
 	- The "identifier" must be shaped like an identifer, but will allow leading number and is returned as a std::string
 	  e.g. that certain package named "0ad", which is a multiplayer game set in the days of the Roman Empire.
-	- Whereas this is a pure addition, rachet the C:R:A=7.0.4 ~ O.F.A=3.0.0
+	- Whereas this is a pure addition, rachet the C:R:A=7.0.4 ~ O.F.A=3.4.0
 	* src/tunitas/app/options.get_identifier.xcpp: ibidem.
 	* src/tunitas/app/options.get_filepath.xcpp: ibidem.
 	* src/tunitas/app/options.get_port.xcpp: commentariat.
