--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,26 @@
-2019-01-23  Wendell Baker  <wbaker@verizonmedia>
+2019-02-11  Wendell Baker  <wbaker@verizonmedia.com>
+
+	* Version v1.7.0-0.devel, tunitas::app::drop(...) privileges; the concept of Quitting
+	- tunitas::required::exception::app::Quitting specifies what a Quitting exception must behave like
+	* src/tunitas/app/Pidfile.xcpp: the Pidfile; manually operable across fork(2)
+	* src/tunitas/required/exception/app.Quitting.xcpp: the concept
+	* src/tunitas/app/options.get_filepath.xcpp: use required::exception::app::Quitting
+	* src/tunitas/app/options.get_identifier.xcpp: ibidem.
+	* src/tunitas/app/options.get_port.xcpp: ibidem.
+	* src/tunitas/app/options.get_word.xcpp: ibidem.
+	* src/tunitas/app/drop.xcpp: drop privileges
+
+2019-02-07  Wendell Baker  <wbaker@verizonmedia.com>
 
 	* Version v1.7.0-0.devel, add tunitas.app.exception becomes a module
 	- whereas these are "additions only" the C:R:A rachets to C:R:A=8.0.5 ~ O.F.A=3.5.0
+	* add onstd.uninitialized_zero
+	* add sys.posix Endent, daemon, endpwent, geteuid, getpwnam, getpwname, getpwuid, getuid, geteuid, getresuid, setreuid
+	- sys.posix.entry Buffer, Pointer
+
+2019-01-23  Wendell Baker  <wbaker@verizonmedia.com>
+
+	* Version v1.7.0-0.devel, add tunitas.app.exception becomes a module
 	- to allow applications to cascade the namespace (easily)
 	- Whereas this is a pure organizational change, rachet the C:R:A=7.1.4 ~ O.F.A=3.4.1
 	* src/tunitas/app/exception/namespace.xcpp: ibidem
