--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2019-08-23  Wendell Craig Baker  <wbaker@verizonmedia.com>
+
+	* Version v1.8.3, modernize the buildconf from temerarious-flagship >= 1.3.3
+	Whereas all the information in the ChangeLog is already in the git log
+	NOTICE IS GIVEN that ChangeLog will disappear in future revisions.
+	See the git log for micro-level changes.
+	Macro documentation is at least at
+	https://wiki.tunitas.technology/page/Project/tunitas-basics
+	https://wiki.tunitas.technology/page/Package/tunitas-basics
+	configure.ac states the authoritative version of the package
+
 2019-05-31  Wendell Craig Baker  <wbaker@verizonmedia.com>
 
 	* Version v1.8.0-0.devel, merge from upstream gives
