--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2019-08-23  Wendell Craig Baker  <wbaker@verizonmedia.com>
 
+	* Version v1.8.4, build robustification; portification to gcc 7
+	see the git logs
+
 	* Version v1.8.3, modernize the buildconf from temerarious-flagship >= 1.3.3
 	Whereas all the information in the ChangeLog is already in the git log
 	NOTICE IS GIVEN that ChangeLog will disappear in future revisions.
